# Pix-Notification

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
src/pix_notification/: app.py
tests/: test_app.py
